[build-system]
build-backend = 'setuptools.build_meta'
# Minimum requirements for the build system to execute.
requires = ["setuptools", "wheel", "pybind11"]  # PEP 508 specifications.

[tool.black]
line-length = 100
target-version = ['py39']

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
norecursedirs="tests/helpers"
log_cli = true

